[tool.poetry]
name = "tsp-classifier"
version = "0.1.0"
description = "A scikit-learn compatible Top-Scoring Pairs (TSP/k-TSP) classifier."
authors = ["Denis Odinokov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/odinokov/tsp-classifier"
packages = [{ include = "tsp_classifier" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2"
numba = "^0.60.0"
scipy = "^1.14.1"
scikit-learn = "^1.6"


[tool.poetry.group.dev.dependencies]
pydoc-markdown = "^4.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "NPY"]
ignore = [
    "N803",  # sklearn convention: uppercase X for feature matrices
    "N806",  # sklearn convention: uppercase X in function bodies
]
